--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
+<?import io.github.gleidson28.GNAvatarView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -32,9 +32,8 @@
                   <Image url="@../Picture/Salework-logo-full.png" />
                </image>
             </ImageView>
-            <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="12.0" />
             <Pane fx:id="switch_pane" layoutX="649.0" layoutY="47.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
-            <MenuButton fx:id="menubutton" layoutX="1175.0" layoutY="12.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: none;" text="Lê Minh Duyệt">
+            <MenuButton fx:id="menubutton" layoutX="1175.0" layoutY="12.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: none;" text="Lê Minh Duyệt" textAlignment="RIGHT">
                <font>
                   <Font name="Inter Bold" size="22.0" />
                </font>
@@ -43,6 +42,7 @@
                 <MenuItem fx:id="logout" mnemonicParsing="false" onAction="#logout" text="Log out" />
                </items>
             </MenuButton>
+            <GNAvatarView fx:id="avatar" layoutX="1417.0" layoutY="11.0" prefHeight="47.0" prefWidth="58.0" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="AnchorPaneBillList" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0">
@@ -130,14 +130,29 @@
                   <Font name="Inter Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="saveInfor_btn" layoutX="1310.0" layoutY="606.0" mnemonicParsing="false" onAction="#saveInforamtion" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Save">
+            <Button fx:id="saveInfor_btn" layoutX="1321.0" layoutY="719.0" mnemonicParsing="false" onAction="#saveInforamtion" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Save">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Button>
-            <Button fx:id="backBilllist_btn1" layoutX="141.0" layoutY="592.0" mnemonicParsing="false" onAction="#backBilllist" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Back">
+            <Button fx:id="backBilllist_btn1" layoutX="145.0" layoutY="719.0" mnemonicParsing="false" onAction="#backBilllist" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Back">
                <font>
                   <Font name="Inter Bold" size="24.0" />
+               </font>
+            </Button>
+            <Label layoutX="141.0" layoutY="583.0" text="Avatar">
+               <font>
+                  <Font name="Inter Bold" size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="setStaffavapath" editable="false" layoutX="137.0" layoutY="619.0" prefHeight="54.0" prefWidth="600.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="21.0" />
+               </font>
+            </TextField>
+            <Button layoutX="639.0" layoutY="625.0" mnemonicParsing="false" onAction="#choosePictureFromDialog" prefHeight="41.0" prefWidth="87.0" style="-fx-background-radius: 15;" styleClass="main_btn" text="Set">
+               <font>
+                  <Font name="Inter Bold" size="20.0" />
                </font>
             </Button>
          </children>
