--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -314,7 +314,7 @@
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Label layoutX="1185.0" layoutY="673.0">
+            <Label fx:id="LabelTotalPrice" layoutX="1185.0" layoutY="673.0">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
@@ -334,7 +334,6 @@
                   <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
-            <Label fx:id="LabelTotalPrice" layoutX="1119.0" layoutY="691.0" prefHeight="36.0" prefWidth="120.0" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="AnchorPaneProductList" layoutX="-5.0" layoutY="70.0" prefHeight="912.0" prefWidth="1533.0" visible="false">
