--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -39,23 +39,23 @@
                         <Image url="@../Picture/Salework-logo-full.png" />
                     </image>
                 </ImageView>
-                <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
+                <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="654.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorProductappear" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="889.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
+                <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="851.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1046.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
+                <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1008.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
                 </Button>
-                <Pane fx:id="switch_pane" layoutX="529.0" layoutY="52.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
-            <MenuButton fx:id="menubutton" layoutX="1175.0" layoutY="12.0" mnemonicParsing="false" style="-fx-background-color: none;" text="Lê Minh Duyệt">
+                <Pane fx:id="switch_pane" layoutX="491.0" layoutY="52.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
+            <MenuButton fx:id="menubutton" layoutX="1099.0" layoutY="12.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="312.0" style="-fx-background-color: none;" text="Trần Ngọc Minh Hoàng">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#logout" text="Log out" />
               </items>
@@ -63,7 +63,7 @@
                   <Font name="Inter Bold" size="22.0" />
                </font>
             </MenuButton>
-                <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="529.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
+                <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="491.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
                     <font>
                         <Font name="Inter ExtraBold" size="28.0" />
                     </font>
@@ -268,7 +268,7 @@
             </children>
         </AnchorPane>
       <Pane fx:id="dimPane" prefHeight="985.0" prefWidth="1518.0" styleClass="dimPane" visible="false" />
-      <AnchorPane fx:id="productInfoAnchorpane" layoutX="31.0" layoutY="140.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
+      <AnchorPane fx:id="productInfoAnchorpane" layoutX="27.0" layoutY="122.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
          <children>
             <Label layoutX="67.0" layoutY="27.0" text="Name">
                <font>
@@ -348,7 +348,7 @@
             <ComboBox fx:id="productTypeComboBox" layoutX="487.0" layoutY="68.0" prefHeight="70.0" prefWidth="394.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="spinner" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="productInfoAnchorpane2" layoutX="41.0" layoutY="150.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
+      <AnchorPane fx:id="productInfoAnchorpane2" layoutX="27.0" layoutY="118.0" prefHeight="797.0" prefWidth="1455.0" style="-fx-background-radius: 20; -fx-border-radius: 20;" styleClass="main-background" visible="false">
          <children>
             <Label layoutX="67.0" layoutY="27.0" text="Name">
                <font>
